# RayTracing

./: .gitignore  CApp.cpp  CMakeLists.txt  README.md  camera.cpp  gradient.cpp  gradient.h  gtfm.cpp  light.cpp  main.cpp  objSphere.cpp  object.cpp  objectPlane.cpp  pointLight.cpp  qbImage.cpp  ray.cpp  rayMarchBase.cpp  scene.cpp  utils.cpp
include/: BasicRoughNorm.h  CApp.h  basicNoiseText.h  camera.h  checkerText.h  colormap.h  composite.h  constantNorm.h  distFunc.h  flatText.h  gradNoise.h  gradient.h  gtfm.h  image.h  imgText.h  light.h  marbleText.h  marchSphere.h  marchTorus.h  material.h  noise.h  normal.h  objCone.h  objCube.h  objSphere.h  object.h  objectCylinder.h  objectPlane.h  pointLight.h  qbImage.h  ray.h  rayMarchBase.h  scene.h  simpleMaterial.h  simpleRefractive.h  stone.h  textNorm.h  texture.h  utils.h  valNoise.h
lights/: light.cpp  pointLight.cpp
materials/: material.cpp  simpleMaterial.cpp  simpleRefractive.cpp
noise/: gradNoise.cpp  noise.cpp  valNoise.cpp
normals/: BasicRoughNorm.cpp  constantNorm.cpp  image.cpp  normal.cpp  textNorm.cpp
objects/: composite.cpp  objCone.cpp  objCube.cpp  objSphere.cpp  object.cpp  objectCylinder.cpp  objectPlane.cpp
raymarch/: distFunc.cpp  marchSphere.cpp  marchTorus.cpp  rayMarchBase.cpp
textures/: basicNoiseText.cpp  checkerText.cpp  colormap.cpp  flatText.cpp  gradient.cpp  imgText.cpp  marbleText.cpp  stone.cpp  texture.cpp
